--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,8 +1,13 @@
 <div class="container">
-  <h1>Your contacts JSON file</h1>
+  <h2>Your contacts JSON file</h1>
   <input type="file" on-read-file="showContent($fileContent)" />
   <div ng-if="content">
-    <h2>File content is:</h2>
+    <h3>File content is:</h2>
       <pre>{{ content }}</pre>
   </div>
+
+  <h2>My contacts</h2>
+  <table class="table table-striped">
+
+  </table>
 </div>
