add table to main view

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -6,3 +6,24 @@
       <pre>{{ content }}</pre>
   </div>
 </div>
+
+<table class="table table-striped"> 
+	<thead> 
+		<tr> 
+			<th>#</th> 
+			<th>First Name</th> 
+			<th>Last Name</th> 
+			<th>Edit</th> 
+		</tr> 
+	</thead> 
+	<tbody> 
+		<tr> 
+			<th scope="row">1</th> 
+			<td>Mark</td> 
+			<td>Otto</td> 
+			<td>
+				<a type="button" class="btn btn-primary btn-xs glyphicon glyphicon-pencil" href="edit/test"></a>
+			</td> 
+		</tr> 
+	</tbody> 
+</table>
