create files for show map

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -33,7 +33,7 @@
 			<td>{{x.city}}</td> 
 			<td>{{x.postcode}}</td> 
 			<td>
-				<a type="button" class="btn btn-primary btn-xs glyphicon glyphicon-pencil" href="edit/test"></a>
+				<a type="button" class="btn btn-primary btn-xs glyphicon glyphicon-pencil" href="#/edit/test"></a>
 			</td> 
 		</tr> 
 	</tbody> 
