--- a/app/views/edit.html
+++ b/app/views/edit.html
@@ -2,14 +2,26 @@
   <h2>Edit a contact</h1>
   <form>
     <div class="form-group">
-      <label for="exampleInputEmail1">Firstname</label>
-      <input type="text" class="form-control" placeholder="Firstname">
+      <label>Firstname</label>
+      <input type="text" class="form-control" placeholder="Firstname" ng-model = "contact.firstname">
     </div>
     <div class="form-group">
-      <label for="exampleInputPassword1">Lastname</label>
-       <input type="text" class="form-control" placeholder="Firstname">
+      <label>Lastname</label>
+       <input type="text" class="form-control" placeholder="Firstname" ng-model = "contact.lastname">
     </div>
-    <button type="submit" class="btn btn-default">Save</button>
+    <div class="form-group">
+      <label>Street</label>
+       <input type="text" class="form-control" placeholder="Firstname" ng-model = "contact.street">
+    </div>
+    <div class="form-group">
+      <label>City</label>
+       <input type="text" class="form-control" placeholder="Firstname" ng-model = "contact.city">
+    </div>
+    <div class="form-group">
+      <label>Postcode</label>
+       <input type="text" class="form-control" placeholder="Firstname" ng-model = "contact.postcode">
+    </div>
+    <button type="submit" class="btn btn-default" ng-click="save()">Save</button>
   </form>
 
 </div>
