--- a/app/views/main.html
+++ b/app/views/main.html
@@ -12,29 +12,29 @@
   </table>
 </div>
 
-<table class="table table-striped"> 
-	<thead> 
-		<tr> 
-			<th>#</th> 
-			<th>First Name</th> 
-			<th>Last Name</th> 
-			<th>Street</th> 
-			<th>City</th> 
-			<th>Postcode</th> 
-			<th>Edit</th> 
-		</tr> 
-	</thead> 
-	<tbody> 
-		<tr ng-repeat="x in contacts"> 
-			<th scope="row">{{x.number}}</th> 
-			<td>{{x.firstname}}</td> 
-			<td>{{x.lastname}}</td> 
-			<td>{{x.street}}</td> 
-			<td>{{x.city}}</td> 
-			<td>{{x.postcode}}</td> 
+<table class="table table-striped">
+	<thead>
+		<tr>
+			<th>#</th>
+			<th>First Name</th>
+			<th>Last Name</th>
+			<th>Street</th>
+			<th>City</th>
+			<th>Postcode</th>
+			<th>Edit</th>
+		</tr>
+	</thead>
+	<tbody>
+		<tr ng-repeat="x in contacts">
+			<th scope="row">{{x.number}}</th>
+			<td>{{x.firstname}}</td>
+			<td>{{x.lastname}}</td>
+			<td>{{x.street}}</td>
+			<td>{{x.city}}</td>
+			<td>{{x.postcode}}</td>
 			<td>
-				<a type="button" class="btn btn-primary btn-xs glyphicon glyphicon-pencil" href="#/edit/test"></a>
-			</td> 
-		</tr> 
-	</tbody> 
+				<a type="button" class="btn btn-primary btn-xs glyphicon glyphicon-pencil" ng-href="#/edit/{{x.$id}}"></a>
+			</td>
+		</tr>
+	</tbody>
 </table>
