--- a/app/views/add.html
+++ b/app/views/add.html
@@ -21,7 +21,7 @@
       <label>Postcode</label>
        <input type="text" class="form-control" placeholder="Firstname" ng-model = "contact.postcode">
     </div>
-    <button type="submit" class="btn btn-default" ng-click="add()">Add</button>
+    <button type="submit" class="btn btn-default" ng-click="addContact()">Add</button>
   </form>
 
 </div>
