--- a/app/views/add.html
+++ b/app/views/add.html
@@ -10,6 +10,10 @@
        <input type="text" class="form-control" placeholder="Firstname" ng-model = "contact.lastname">
     </div>
     <div class="form-group">
+      <label>Number</label>
+      <input type="number" class="form-control" placeholder="Firstname" ng-model = "contact.number">
+    </div>
+    <div class="form-group">
       <label>Street</label>
        <input type="text" class="form-control" placeholder="Firstname" ng-model = "contact.street">
     </div>
